--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build": "tsc",
     "dev": "tsx src/index",
     "lint": "eslint .",
-    "format": "eslint . --fix"
+    "format": "eslint . --fix",
+    "lint:sarif": "eslint --ext .ts ./src -f @microsoft/sarif -o eslint-results.sarif --quiet"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.449.0",
@@ -24,6 +25,7 @@
     "fastq": "^1.15.0"
   },
   "devDependencies": {
+    "@microsoft/eslint-formatter-sarif": "^3.0.0",
     "@types/node": "^20.9.0",
     "eslint": "^8.53.0",
     "eslint-config-snazzah": "^2.0.0",
