--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,6 +19,7 @@ jobs:
     permissions:
       pull-requests: write
       contents: write
+      security-events: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -28,10 +29,10 @@ jobs:
         with:
           version: 8
 
-      - name: Install Node v16
+      - name: Install Node v20
         uses: actions/setup-node@v4
         with:
-          node-version: 16.x
+          node-version: 20.x
           cache: 'pnpm'
 
       - name: Install dependencies
